# quantumlogic-chip-tech

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.streamlit  ELEVATOR_PITCHES.md  PRESENTATION.md  PROJECT_ORGANIZATION.md  README.md  README_DOCKER_CI.md  app.py  demo.py  generate_pdf.py  pyproject.toml  render.yaml  requirements.txt  start.sh
.github/workflows/: ci.yml  docker.yml
demos/: README.md  demo.py  simple_demo.py
deployment/: Dockerfile.api  Dockerfile.streamlit  README.md  docker-compose.yml  start.sh
docs/: ARCHITECTURE.md  DESIGN.md  ROADMAP.md
documentation/: ENHANCEMENT_SUMMARY.md  FINAL_ENHANCEMENT_SUMMARY.md  README.md  VISUAL_DEMO_GUIDE.md
presentations/: PRESENTATION_OUTLINE.md  QLCT_Presentation.docx  QLCT_Presentation.html  QLCT_Presentation_Clean.pptx  README.md  technical_architecture_presentation.md  technical_deep_dive.html
src/qlct/: config.py
src/qlct.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/qlct/algorithms/: amp_est.py  grover.py  sim_circuit.py
src/qlct/crypto/: pqc_adapter.py  symmetric.py
src/qlct/database/: __init__.py  models.py
src/qlct/monitoring/: __init__.py  dashboard.py
src/qlct/pipeline/: fastapi_app.py  middleware.py  pipeline_demo.py  service.py
static/: logo_placeholder.md
temp/: README.md  current_landing.html
tests/: test_all.py  test_api_endpoints.py
