[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qlct"
version = "0.1.0"
description = "Quantum Logic Chip Technology"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "qiskit",
    "numpy",
    "fastapi",
    "uvicorn",
    "cryptography",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
